# mmm-param-recovery

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  NOTICE  README.md  combined_comparison.ipynb  comparison_all_cpu_adstock_large_dataset.ipynb  cpu-environment.yaml  data.ipynb  gpu-pyproject.toml  gpu-requirements-compiled.txt  gpu-requirements.txt  input_data_RAW.csv  meridian-geo-level-mmm.ipynb  mmm_data_generator_example.ipynb  model_data_ready.ipynb  pixi.toml  plot_channel_comparison.py  pymc-marketing.ipynb  pyproject.toml  run_benchmark.py  test_gpu.py  test_gpu_minimal.py  test_gpu_simple.py  true_output_data.csv  visualisation.ipynb
.claude/commands/: learn.md
.cursor/rules/: create-prd.mdc  generate-tasks.mdc  process-task-list.mdc
archive/: data.ipynb  meridian-geo-level-mmm.ipynb  model_data_ready.ipynb  pymc-marketing-geo-mmm.ipynb  pymc-marketing.ipynb
mmm_data_generator/: README.md  config.py  core.py  presets.py  pyproject.toml  regions.py
mmm_param_recovery/: __init__.py  evaluation.py  fit_meridian.py  fit_pymc_marketing.py  make_test_data.py
mmm_param_recovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mmm_param_recovery/benchmarking/: __init__.py  bayesian_evaluation.py  bayesian_metrics.py  data_loader.py  diagnostics.py  evaluation.py  model_builder.py  model_fitter.py  parameter_counter.py  storage.py  visualization.py
mmm_param_recovery/data_generator/: __init__.py  channels.py  config.py  core.py  ground_truth.py  presets.py  regions.py  transforms.py  utils.py  validation.py  visualization.py
plots/: plot_x3_comparison.py  visualisation.ipynb
tasks/: prd-mmm-dataset-generator.md  tasks-prd-mmm-dataset-generator.md
tests/: test_default_config.py  test_ground_truth.py  test_presets_validation.py  test_schema.py  test_transforms.py  test_visualization.py
