[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmm-param-recovery"
version = "0.1.0"
description = "A package for generating synthetic MMM (Media Mix Modeling) datasets for parameter recovery studies"
authors = [{name = "Thomas Wiecki", email = "thomas.wiecki@gmail.com"}]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmm_param_recovery*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
mmm-param-recovery = { path = ".", editable = true }
google-meridian = "==1.2.1"
statsmodels = "*"
seaborn = "*"
pymc-marketing = ">=0.15.1,<0.16"

[tool.pixi.dependencies]
pytest = "*"
ipykernel = "*"
jupytext = "*"
jupyterlab = "*"
arviz = "*"
matplotlib = "*"
numpy = "==2.0.2"
pandas = "*"
tensorflow = "*"
tensorflow-probability = "*"
xarray = "*"
pympler = "*"
jax = ">=0.4.0, <0.5.0"
numpyro = "*"
nutpie = "*"
ipywidgets = ">=8.1.7,<9"
memory_profiler = ">=0.61.0,<0.62"
pymc = "==5.24.1"
blackjax = "*"
great_tables = "*"
patsy = "==0.5.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 

