[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmm-param-recovery-workspace"
version = "0.1.0"
description = "Workspace for MMM parameter recovery packages"
authors = [{name = "PyMC Labs", email = "info@pymc-labs.com"}]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "jupyterlab",
    "ipykernel",
    "jupytext",
]

[tool.setuptools.packages.find]
where = ["packages"]
include = ["mmm_data_generator*", "mmm_param_recovery*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
mmm-data-generator = { path = "packages/mmm-data-generator", editable = true }
mmm-param-recovery = { path = "packages/mmm-param-recovery", editable = true }

[tool.pixi.dependencies]
pytest = "*"
ipykernel = "*"
jax = ">0.4.0, <0.5.0"
jupytext = "*"
jupyterlab = "*"
arviz = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
seaborn = "*"
tensorflow = "*"
tensorflow-probability = "*"
xarray = "*"
pympler = "*"
statsmodels = "*"
ipywidgets = ">=8.1.7,<9"
memory_profiler = ">=0.61.0,<0.62"
great_tables = ">=0.18.0,<0.19"
pymc-marketing = ">=0.16.0,<0.17"
pymc = ">=5.25.1,<6"
numpyro = ">=0.19.0,<0.20"
nutpie = ">=0.15.2,<0.16"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 

