[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmm-param-recovery-workspace"
version = "0.1.0"
description = "Workspace for MMM parameter recovery packages"
authors = [{name = "PyMC Labs", email = "info@pymc-labs.com"}]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "jupyterlab",
    "ipykernel",
    "jupytext",
]

[tool.setuptools.packages.find]
where = ["packages"]
include = ["mmm_data_generator*", "mmm_param_recovery*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 

